--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,43 @@
-Flask
-numpy
-scikit-image
-scikit-learn
-joblib 
-gunicorn
-typing-extensions
+# Web Framework
+Flask==3.1.1
+gunicorn==23.0.0
+
+# Machine Learning - Core
+tensorflow==2.19.0
+scikit-learn==1.6.1
+scikit-image==0.25.2
+numpy==2.1.3
+scipy==1.15.3
+joblib==1.5.1
+
+# Image Processing
+pillow==11.2.1
+imageio==2.37.0
+
+# HTTP Requests
+requests==2.32.3
+
+# TensorFlow Dependencies (automatically installed with tensorflow but listed for clarity)
+keras==3.10.0
+h5py==3.13.0
+protobuf==5.29.5
+grpcio==1.71.0
+tensorboard==2.19.0
+
+# Utilities
+networkx==3.5
+typing-extensions==4.13.2
+packaging==25.0
+
+# Flask Dependencies
+werkzeug==3.1.3
+jinja2==3.1.6
+markupsafe==3.0.2
+itsdangerous==2.2.0
+click==8.2.1
+blinker==1.9.0
+
+# Additional dependencies for full functionality
+threadpoolctl==3.6.0
+tifffile==2025.5.26
+lazy-loader==0.4
